# ek-global-project

./: .env.example  .gitignore  README.md  converter.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
apps/: __init__.py
apps/Academy/: __init__.py  admin.py  apps.py  models.py  urls.py  utils.py  views.py
apps/Alerts/: admin.py  apps.py  models.py  urls.py  views.py
apps/Fullview/: apps.py  urls.py  views.py
apps/News/: models.py  urls.py  views.py
apps/SmartScreener/: apps.py  helpers.py  models.py  schemas.py  urls.py  utils.py  views.py
apps/accounts/: admin.py  apps.py  auth_backends.py  forms.py  managers.py  models.py  urls.py  views.py
apps/copilot/: urls.py  views.py
apps/dashboard/: api_client.py  models.py  script.py  urls.py  views.py
apps/live_rates/: apps.py  data_cleaners.py  rate_providers.py  rates.py  scheduled_tasks.py
apps/portfolios/: admin.py  data_cleaners.py  forms.py  helpers.py  models.py  stock_summary.py  transactions_upload.py  urls.py  views.py
apps/psxscreener/: admin.py  apps.py  filter_service.py  manual_migration.py  models.py  schemas.py  urls.py  views.py
apps/risk_management/: apps.py  arg_evaluators.py  forms.py  kwargs_schemas.py  (+5 more)
core/: __init__.py  settings.py  urls.py  wsgi.py
helpers/: __init__.py  attrs.py  config.py  managers.py  typing_utils.py
resources/: 863058.csv  TRAN (5).csv  TRAN 863058 jun 2024.csv  TRAN_MASHOOD.csv  kse100.csv  rates.csv  rates_.csv  stocks_indices.csv
ta-lib/: Makefile  bin  config.status  libtool
templates/: base.html  copilot_feature.html
(+163 files in other folders)
